syntax = "proto2";

option java_package = "org.example.proto";
option java_outer_classname = "GreeterProto";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    optional string name = 1;
}

message HelloReply {
    optional string message = 1;
}
